Fix alignment of "active" indicator (#60159)

--- a/client/components/theme/style.scss
+++ b/client/components/theme/style.scss
@@ -129,7 +129,6 @@ $theme-info-height: 54px;
 
 .theme__badge-active {
 	flex: 0 0 auto;
-	padding: 18px 10px 0;
 	color: var( --color-primary-0 );
 	text-transform: uppercase;
 	font-size: $font-body-extra-small;
